--- a/chap08.ipynb
+++ b/chap08.ipynb
@@ -7462,7 +7462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "08294921",
    "metadata": {},
    "outputs": [],
@@ -7470,18 +7470,34 @@
     "# Solution goes here\n",
     "def count_pale(fileName):\n",
     "    count = 0\n",
+    "    target_words = [\"pale\", \"pales\", \"paled\", \"paleness\", \"pallor\"]\n",
     "    file = open(fileName, \"r\").read()\n",
     "    splitWords = file.split()\n",
-    "    print(splitWords)\n",
+    "\n",
+    "    for word in splitWords:\n",
+    "        if word in target_words:\n",
+    "            count += 1\n",
+    "    return count\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "3eb8f83f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "131"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solution goes here\n",
     "count_pale('pg1184_cleaned.txt')"
