--- a/chap09.ipynb
+++ b/chap09.ipynb
@@ -1633,6 +1633,7 @@
    },
    "outputs": [],
    "source": [
+    "# Solution goes here\n",
     "def is_anagram(word1, word2):\n",
     "    \"\"\"Checks whether two words are anagrams.\n",
     "    \n",
@@ -1645,17 +1646,7 @@
     "    >>> is_anagram('skate', 'stop')\n",
     "    False\n",
     "    \"\"\"\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "5885cbd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
+    "    return len(set(word1)) == len(set(word2))"
    ]
   },
   {
